<resources>
    <string name="app_name">Fuimonos</string>
    <string name="log_in">Iniciá\nSesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Entrar</string>
    <string name="without_account_yet">¿Aún no\ntenés una cuenta?</string>
    <string name="register_new_account">Registra una cuenta nueva</string>
    <string name="val_empty_email">Necesitamos tu correo</string>
    <string name="val_invalid_email">Este correo no es válido</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="name_required">Nombre*</string>
    <string name="email_required">Correo electrónico*</string>
    <string name="password_required">Contraseña*</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="phonenumber_required">Número de celular*</string>
    <string name="sign_me_up">¡Registrame!</string>
    <string name="last_name_required">Apellido*</string>
    <string name="val_empty_name">Necesitamos tu nombre</string>
    <string name="val_emtpy_last_name">Necesitamos tu apellido</string>
    <string name="val_empty_password">Necesitamos tu contraseña</string>
    <string name="val_empty_phone_number">Necesitamos tu número de celular</string>
    <string name="recover_your_password">Recuperá\ntu contraseña</string>
    <string name="recovery_description">Confirmá tu correo electrónico y te enviaremos una nueva contraseña.</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="ready">¡Listo!</string>
    <string name="recovery_success_description">No hay más que hacer aquí, ahora revisá tu correo electrónico.</string>
    <string name="login_app">Iniciar sesión</string>
    <string name="come_back">Regresar</string>
    <string name="no_internet_dialog_title">Elon, tenemos\nun problema...</string>
    <string name="no_internet_dialog_main_description">No tenés conexión a internet</string>
    <string name="no_internet_dialog_secondary_description">Por favor revisa tu conexión</string>
    <string name="unknown_error_dialog_title">Uhhh...</string>
    <string name="unknown_error_dialog_mainDescription">Pasó algo desconocido</string>
    <string name="unknown_error_dialog_secondaryDescription">Ocurrió un error inesperado, contáctese con nosotros para darle soporte</string>
    <string name="what_will_you_eat_today">¿Qué vas\na comer hoy?</string>
    <string name="search">Buscar</string>
    <string name="home">Inicio</string>
    <string name="shopping_cart">Carrito de compra</string>
    <string name="options">Opciones</string>
    <string name="x_restaurants">%d restaurantes</string>
    <string name="minimal_mount">Monto\nmínimo</string>
    <string name="add">Agregar</string>
    <string name="price_x">\u0024%.2f</string>
    <string name="select_complements">Seleccioná complementos</string>
    <string name="minus_sign">—</string>
    <string name="plus_sign">+</string>
    <string name="initial_number_picker_value">1</string>
    <string name="add_to_shopping_cart">Agregar a carrito</string>
    <string name="empty_shopping_cart_title">Aquí no hay nada,\ncreí que teníamos hambre...</string>
    <string name="your_cart_is_empty">Tu carrito está vacío</string>
    <string name="empty_shopping_cart_description">Haz un pedido para visualizar tus ordenes</string>
    <string name="my_profile_option">Mi perfil</string>
    <string name="wallet_option">Billetera</string>
    <string name="adresses_option">Direcciones</string>
    <string name="my_orders_option">Mis órdenes</string>
    <string name="favorites_option">Favoritos</string>
    <string name="support_option">Soporte</string>
    <string name="contact_us_option">Contactanos</string>
    <string name="track_your_order_option">Seguí tu pedido</string>
    <string name="log_out_option">Cerrar sesión</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="hello_x">Hola %s!</string>
    <string name="current_password_required">Contraseña actual*</string>
    <string name="new_password_required">Nueva contraseña*</string>
    <string name="confirm_password_required">Confirmar contraseña*</string>
    <string name="val_empty_current_pass">Necesitamos tu contraseña actual</string>
    <string name="val_empty_new_pass">Necesitamos tu nueva contraseña</string>
    <string name="val_empty_confirm_pass">Necesitamos que confirmes tu contraseña nueva</string>
    <string name="val_pass_not_equals">Las contraseñas no coinciden</string>
</resources>
