<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.fuimonos.app.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewTitleStyle"
            android:id="@+id/tvTitle"
            android:includeFontPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/log_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_5x"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/inputPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:text="@={viewModel.email}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:text="@={viewModel.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPassword"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/space_default"
            android:text="@string/forgot_password"
            android:paddingTop="@dimen/space_default"
            android:paddingBottom="@dimen/space_default"
            android:textColor="@color/purple"
            android:onClick="@{ () -> viewModel.onForgotPassword() }"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"/>

        <com.google.android.material.button.MaterialButton
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginEnd="@dimen/space_4x"
            android:text="@string/login"
            android:onClick="@{ () -> viewModel.onLogin() }"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="@+id/inputPassword"
            app:layout_constraintBottom_toTopOf="@+id/tvWithoutAccount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWithoutAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple"
            android:text="@string/without_account_yet"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toTopOf="@+id/tvRegisterNewAccount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRegisterNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:textColor="@color/purple"
            android:text="@string/register_new_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWithoutAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnFuimonosSignUp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_app_logo"
            android:onClick="@{ () -> viewModel.onSignUp() }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterNewAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>