<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.fuimonos.app.signup.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewTitleStyle"
                android:id="@+id/tvTitle"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_4x"
                android:text="@string/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/flProfilePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/space_2x"
                android:padding="@dimen/space_4n"
                android:background="@drawable/ripple_circle_profile_photo_shape"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{ () -> viewModel.onPickProfilePhoto() }"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputName">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_empty_profile_photo" />

            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:srcCompat="@drawable/ic_plus"
                app:layout_constraintCircle="@id/flProfilePhoto"
                app:layout_constraintCircleAngle="140"
                app:layout_constraintCircleRadius="48dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/name_required"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flProfilePhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/EditTextCompactSpacingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/last_name_required"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputEmail">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCompactSpacingStyle"
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.lastName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/email_required"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputPassword">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCompactSpacingStyle"
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.email}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/password_required"
                app:passwordToggleEnabled="true"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputBirthday">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCompactSpacingStyle"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/birthday"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/inputPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCompactSpacingStyle"
                    android:id="@+id/etBirthday"
                    android:clickable="true"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.birthday}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5x"
                android:layout_marginEnd="@dimen/space_5x"
                android:layout_marginTop="@dimen/space_2x"
                app:boxBackgroundColor="@color/opaquePurple"
                android:hint="@string/phonenumber_required"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputBirthday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextCompactSpacingStyle"
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.phoneNumber}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/PrimaryRightButtonStyle"
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2x"
                android:layout_marginBottom="@dimen/space_2x"
                android:text="@string/sign_me_up"
                android:onClick="@{ () -> viewModel.onSignUp() }"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
