<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fuimonos.app.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="@style/HorizontalProgressBarStyle"
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/SelectableBorderlesStyle"
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginTop="@dimen/space_3x"
            app:srcCompat="@drawable/ic_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10x"
            android:layout_marginTop="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_10x"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/change_password_act_icon"
            app:layout_constraintTop_toBottomOf="@+id/ivBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCurrentPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/current_password_required"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/inputNewPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:text="@={viewModel.currentPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/new_password_required"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCurrentPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/inputConfirmPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:text="@={viewModel.newPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginEnd="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            app:boxBackgroundColor="@color/opaquePurple"
            android:hint="@string/confirm_password_required"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnChangePassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextCompactSpacingStyle"
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:text="@={viewModel.confirmPassword}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/SecondaryButtonStyle"
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_4x"
            android:text="@string/change_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="8dp"
            android:onClick="@{ () -> viewModel.onChangePassword() }"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>